# eie_nrf52840

./: .clangd  CMakeLists.txt  README.md  pyproject.toml  west.yml
app/: CMakeLists.txt  main.c  prj.conf  tamagotchi.c
app/src/: app_state_machine.c  app_state_machine.h  main.c  my_state_machine.c  my_state_machine.h  password_state_machine.c  password_state_machine.h  tamagotchi.c  tamagotchi.h  tamagotchii.md
doc/1_Getting_Started/: README.MD  getting_started.adoc
doc/2_Version_Control/: README.MD  git_cheatsheet.txt
things-to-remember/scripts/: flash-and-build
